feat: update shell generation and payload codec support